--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -5,9 +5,9 @@
     >
    <ImageView
        android:layout_width="424dp"
-       android:layout_height="60dp"
+       android:layout_height="wrap_content"
        android:layout_gravity="center"
-       android:background="@drawable/head"
+       android:background="@drawable/banner3"
        android:id="@+id/head"
        />
 
