--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -6,13 +6,21 @@
         android:title="@string/home"
         android:icon="@drawable/homepage"/>
     <item
+        android:id="@+id/Samkel"
+        android:title="Samsat keliling"
+        android:icon="@drawable/samkel"/>
+    <item
         android:id="@+id/info"
         android:title="@string/info_layanan"
         android:icon="@drawable/more_info"/>
+   
+
+
     <item
         android:id="@+id/lokasi"
-        android:title="Maps"
+        android:title="GIS Payment"
         android:icon="@drawable/gmaps"/>
+
 
 
 </menu>
