--- a/app/src/main/res/drawable-mdpi/stylebutton.xml
+++ b/app/src/main/res/drawable-mdpi/stylebutton.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:innerRadius="10dp">
 
     <gradient
         android:angle="225"
-        android:endColor="#F96C6C"
-        android:startColor="#F96C6C"/>
+        android:endColor="#FFA500"
+        android:startColor="	#FFA500"/>
 </shape>
