--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -1,218 +1,153 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".ui.InfoActivity">
 
-    tools:context=".ui.InfoActivity"
-    >
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ScrollView
-            android:layout_width="match_parent"
-            android:id="@+id/ScrolV"
-            android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="424dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/banner3"
+            android:id="@+id/head"
+            />
+
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="63dp"
-            tools:layout_editor_absoluteY="0dp">
-            <View
-                android:id="@+id/view1"
-                android:layout_width="415dp"
-                android:layout_height="2dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:background="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txt" />
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="20dp">
+
             <TextView
-                android:id="@+id/txt"
+                android:id="@+id/txApp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="25dp"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/info_layanan_samsat"
-                android:textColor="#000"
-                android:textSize="25sp"
-                android:textStyle="bold" />
-            <View
-                android:id="@+id/view"
-                android:layout_width="450dp"
-                android:layout_height="2dp"
-                android:layout_below="@id/txt"
-                android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:background="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txt" />
-            <LinearLayout
+                android:text="Tentang E-Samsat"
+                android:textColor="@color/black"
+                android:textSize="25sp" />
+
+            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_below="@id/view"
-                android:layout_marginLeft="90dp"
-                android:layout_marginTop="35dp"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <ImageButton
-                    android:id="@+id/img1"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:background="@drawable/ikon_menu"
-                    android:src="@drawable/browse" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="Cek Pajak"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold">
-                </TextView>
-
-                <ImageButton
-                    android:id="@+id/img4"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="25dp"
-                    android:background="@drawable/ikon_menu"
-                    android:src="@drawable/rules" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="@string/peraturan"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold">
-
-                </TextView>
-
-                <ImageButton
-                    android:id="@+id/img3"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="25dp"
-                    android:background="@drawable/ikon_menu"
-                    android:src="@drawable/car" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="SamKel"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold">
-
-
-                </TextView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_below="@id/view"
-                android:layout_marginLeft="200dp"
-
-
-                android:layout_marginTop="35dp"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <ImageButton
-                    android:id="@+id/img2"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:background="@drawable/ikon_menu"
-                    android:src="@drawable/atm" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-
-
-                    android:text=" Pembayaran"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold">
-
-
-                </TextView>
-
-                <ImageButton
-                    android:id="@+id/img5"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="25dp"
-                    android:background="@drawable/ikon_menu"
-                    android:src="@drawable/pengaduan" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="@string/pengaduan"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold">
-
-                </TextView>
-
-                <ImageButton
-                    android:id="@+id/img6"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="25dp"
-                    android:background="@drawable/ikon_menu"
-                    android:src="@drawable/qna" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="FAQ"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold">
-
-                </TextView>
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true">
-
-                <com.google.android.material.bottomnavigation.BottomNavigationView
-                    android:id="@+id/nav_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginEnd="0dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="16dp"
-                    android:background="@drawable/nav_bacground"
-                    android:elevation="8dp"
-                    app:itemIconTint="@drawable/nav_color_selector"
-                    app:labelVisibilityMode="unlabeled"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:menu="@menu/menu_nav" />
-            </LinearLayout>
-
+                android:layout_below="@id/txApp"
+                android:layout_marginTop="6dp"
+                android:text="Selamat Datang di Layanan Samsat Mobile"
+                android:textColor="#52BAFF"
+                android:textSize="15sp" />
         </RelativeLayout>
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="2"
+            android:rowCount="2"
+            android:columnOrderPreserved="false"
+            android:alignmentMode="alignMargins"
+            android:layout_marginTop="20dp">
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="2"
+                android:layout_rowWeight="2"
+                app:cardElevation="8dp"
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                app:cardCornerRadius="15sp"
+                android:layout_margin="10dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="16sp"
+                    android:gravity="center"
+                    android:background="@color/white">
+                    <ImageView
+                        android:src="@drawable/layanan"
+                        android:layout_width="80dp"
+                        android:id="@+id/cardservice"
+                        android:layout_height="80dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:textSize="18sp"
+                        android:text="Layanan Samsat"
+                        android:fontFamily="sans-serif-black"
+                        android:textColor="@color/black"
+                       />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="2"
+                android:layout_rowWeight="2"
+
+                app:cardElevation="8dp"
+                app:cardCornerRadius="15sp"
+                android:layout_margin="10dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="16sp"
+                    android:gravity="center"
+                    android:background="@color/white">
+                    <ImageView
+                        android:src="@drawable/manualbook"
+                        android:layout_width="80dp"
+                        android:id="@+id/cardpanduan"
+                        android:layout_height="80dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:textSize="18sp"
+                        android:fontFamily="sans-serif-black"
+                        android:text="Buku Panduan"
+                        android:textColor="@color/black"/>
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+
+        </GridLayout>
+    </LinearLayout>
+
+
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/nav_bacground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:menu="@menu/menu_nav"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:elevation="8dp"
+            app:labelVisibilityMode="unlabeled"
+            app:itemIconTint="@drawable/nav_color_selector"/>
+    </RelativeLayout>
+
 </RelativeLayout>
