--- a/app/src/main/res/layout/activity_pembayaran.xml
+++ b/app/src/main/res/layout/activity_pembayaran.xml
@@ -6,25 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".info.Pembayaran.PembayaranActivity">
 
-
+    <ImageView
+        android:layout_width="424dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/banner3"
+        android:id="@+id/head"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:layout_marginTop="10dp"
+
         android:layout_centerHorizontal="true"
+        android:layout_below="@id/head"
         android:gravity="center"
-        android:text="Cara Pembayaran Pajak "
-        android:fontFamily="sans-serif-black"
-        android:textColor="#000"
-        android:textSize="25sp"
-        android:id="@+id/txt"
+        android:singleLine="true"
+        android:padding="15dp"
+        android:ellipsize="marquee"
+        android:text="Selamat Datang di Layanan Informasi Pembayaran Pajak"
+        android:fontFamily="sans-serif"       android:textColor="#000"
+        android:textSize="20sp"
+        android:id="@+id/txtbayar"
         />
     <View
         android:layout_width="450dp"
         android:layout_height="2dp"
         android:layout_gravity="center"
-        android:layout_below="@id/txt"
+        android:layout_below="@id/txtbayar"
         android:layout_marginTop="12dp"
         android:background="@color/black"
         android:id="@+id/view"
@@ -40,7 +49,6 @@
         android:layout_width="match_parent"
         android:id="@+id/rv_pembayaran"
         android:layout_height="fill_parent"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
