--- a/app/src/main/res/layout/list_itempembayaran.xml
+++ b/app/src/main/res/layout/list_itempembayaran.xml
@@ -37,6 +37,19 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+
+    <ImageView
+        android:id="@+id/imageRow"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="36dp"
+        android:src="@drawable/arrow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toEndOf="@+id/titleimg"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
 
