--- a/app/src/main/res/layout/list_jadwal.xml
+++ b/app/src/main/res/layout/list_jadwal.xml
@@ -4,7 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="0.5dp"
+       android:layout_marginRight="10dp"
+    android:layout_marginLeft="10dp"
+    android:id="@+id/cardview"
+    android:onClick="onClick"
     app:cardElevation="2dp"
     app:cardUseCompatPadding="true"
     >
@@ -14,8 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
-        android:background="#F8F8FF"
-        android:layout_marginTop="30dp"
+
+        android:layout_marginTop="5dp"
         android:outlineAmbientShadowColor="@color/black"
         android:orientation="vertical">
 
@@ -36,7 +39,7 @@
             android:text="Bukittinggi"
             android:textAppearance="@style/Base.CardView"
             android:textColor="#000"
-            android:textSize="13sp"
+            android:textSize="18sp"
             />
 
         <TextView
@@ -47,7 +50,7 @@
             android:layout_marginTop="10dp"
             android:text="0752 1375"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="18sp"
             />
 
 
