--- a/app/src/main/res/layout/list_periode.xml
+++ b/app/src/main/res/layout/list_periode.xml
@@ -5,8 +5,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="0.5dp"
-    app:cardElevation="2dp"
+    app:cardElevation="1dp"
     app:cardUseCompatPadding="true"
+
     >
 
     <LinearLayout
@@ -14,13 +15,12 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
-        android:background="#F8F8FF"
         android:layout_marginTop="30dp"
         android:outlineAmbientShadowColor="@color/black"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/txtNamaUPTD"
+            android:id="@+id/txtbulan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="JANUARI"
