--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,7 +6,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MapsActivity">
+    tools:context=".ui.GIS.MapsActivity">
 
 
 
@@ -15,7 +15,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+    android:name="com.google.android.gms.maps.MapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
