--- a/app/src/main/res/layout/list_samkel.xml
+++ b/app/src/main/res/layout/list_samkel.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="0.5dp"
+    android:layout_marginRight="7dp"
+    android:layout_marginLeft="7dp"
     app:cardElevation="2dp"
     app:cardUseCompatPadding="true"
     >
@@ -14,63 +15,99 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
-        android:background="#F8F8FF"
-        android:layout_marginTop="30dp"
         android:outlineAmbientShadowColor="@color/black"
         android:orientation="vertical">
 
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/txtNamaUPTD"
+            android:id="@+id/NamaKota"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kota Padang"
+           android:textSize="18dp"
+            android:textStyle="bold"
+            android:text=" KOTA PADANG "
             android:textColor="#0000FF"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/txtLokasiUPTD"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/txtNamaUPTD"
-            android:text="Kecamatan :"
-            android:textAppearance="@style/Base.CardView"
-            android:textColor="#000"
-            android:textSize="13sp"
             />
-        <TextView
-            android:id="@+id/tanggal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TableRow
+            android:layout_marginTop="0dp"
+       >
 
-            android:text="Tanggal        :"
-            android:textAppearance="@style/Base.CardView"
-            android:textColor="#000"
-            android:textSize="13sp"
-            />
-        <TextView
-            android:id="@+id/Jadwal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            <TextView
 
-            android:text="Jadwal         :"
-            android:textAppearance="@style/Base.CardView"
-            android:textColor="#000"
-            android:textSize="13sp"
-            />
-        <TextView
-            android:id="@+id/lokasi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/txtLokasiUPTD"
-            android:text="Lokasi           :"
-            android:textAppearance="@style/Base.CardView"
-            android:textColor="#000"
-            android:textSize="13sp"
-            />
+                android:layout_column="1"
+                android:padding="2dip"
 
+                android:text="Kecamatan         :"
+                android:layout_marginLeft="4dp"
+                android:textColor="#000"
+                android:typeface="serif"/>
 
+            <TextView
+                android:id="@+id/txtKecamatan"
+                android:layout_width="284dp"
 
+                android:gravity="left"
+                android:padding="2dip"
+                android:textColor="#000"
+                android:text="Padang Barat" />
+        </TableRow>
+        <TableRow
+            android:layout_marginTop="5dp"
+           >
+
+            <TextView
+                android:layout_column="1"
+                android:padding="1dip"
+
+                android:text="Tanggal               :"
+                android:textColor="#000"
+                android:layout_marginLeft="4dp"
+                android:typeface="serif"/>
+            <TextView
+
+                android:id="@+id/txttanggal"
+                android:text="05-10-2021"
+                android:gravity="left"
+                android:textColor="@color/black"
+                android:padding="2dip" />
+        </TableRow>
+        <TableRow
+
+            android:layout_marginTop="5dp">
+            <TextView
+                android:layout_width="120dp"
+                android:layout_column="1"
+
+                android:text="Jadwal                 :"
+                android:textColor="@color/black"
+                android:layout_marginLeft="4dp"
+                android:typeface="serif"/>
+            <TextView
+                android:textColor="@color/black"
+                android:id="@+id/txtJadwal"
+                android:text="08:00:00"
+                android:gravity="left"
+                android:padding="2dip" />
+        </TableRow>
+        <TableRow
+            android:layout_marginTop="5dp">
+            <TextView
+                android:layout_width="120dp"
+                android:layout_column="1"
+                android:layout_marginLeft="4dp"
+                android:text="Lokasi                  :"
+                android:textColor="@color/black"
+                android:typeface="serif"/>
+            <TextView
+                android:id="@+id/txtLokasi"
+                android:textColor="@color/black"
+                android:text="Cafe UJ BP Kuranji"
+                android:gravity="left"
+                android:padding="2dip" />
+        </TableRow>
+        </TableLayout>
 
     </LinearLayout>
 
