--- a/app/src/main/res/layout/activity_monitoring.xml
+++ b/app/src/main/res/layout/activity_monitoring.xml
@@ -37,6 +37,15 @@
             android:layout_marginTop="10dp"
             android:text="kamis, 20 juni 2020"/>
 
+        <com.github.mikephil.charting.charts.PieChart
+
+            android:layout_marginTop="30dp"
+            android:id="@+id/pieChart"
+            android:layout_below="@id/tanggal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
     </RelativeLayout>
     <!--    #9A5FFD-->
     <!--    #5D95F8-->
@@ -58,196 +67,18 @@
         app:labelVisibilityMode="unlabeled"
         app:itemIconTint="@drawable/nav_color_selector"/>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="150dp"
-        app:cardElevation="10dp"
-        android:id="@+id/cardViewGraph"
-        app:cardCornerRadius="5dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:padding="5dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/kasus_up"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Persentase Taat Pajak"
-                android:textColor="@color/Button"
-                android:textSize="18sp"
-                android:gravity="center"
-             />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:paddingTop="10dp"
-            android:weightSum="2"
-            >
-
-            <com.leo.simplearcloader.SimpleArcLoader
-                android:visibility="visible"
-                android:id="@+id/loader2"
-                android:layout_centerInParent="true"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:arc_style="simple_arc"
-                >
-            </com.leo.simplearcloader.SimpleArcLoader>
-
-            <com.github.mikephil.charting.charts.PieChart
-                android:visibility="gone"
-                android:id="@+id/pieChart"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </com.github.mikephil.charting.charts.PieChart>
-
-        </LinearLayout>
 
 
 
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/cardViewGraph"
-        android:layout_above="@+id/nav_view"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
-        app:cardElevation="10dp"
-        app:cardCornerRadius="5dp"
-        android:layout_marginBottom="10dp"
-        >
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            >
-            <com.leo.simplearcloader.SimpleArcLoader
-                android:visibility="visible"
-                android:id="@+id/loader"
-                android:layout_centerInParent="true"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:arc_style="simple_arc"
-                >
-            </com.leo.simplearcloader.SimpleArcLoader>
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/scrollStats"
-                android:visibility="gone">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Sebaran Data"
-                        android:textAllCaps="true"
-                        android:textSize="28sp"
-                        android:textStyle="bold"
-                        android:layout_marginLeft="25dp"
-                        android:layout_marginTop="20dp"/>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/black"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="5dp"/>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="25dp"
-                        android:layout_marginLeft="25dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-light"
-                            android:text="Taat Pajak"
-                            android:textSize="18sp"/>
-                        <TextView
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:id="@+id/tvTaat"
-                            android:textAlignment="textEnd"
-                            android:textSize="18sp"
-                            android:textColor="@color/black"
-                            android:textStyle="bold"
-                            android:fontFamily="sans-serif-light"
-                            android:layout_alignParentRight="true"/>
-
-                    </RelativeLayout>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/black"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        />
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="25dp"
-                        android:layout_marginLeft="25dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-light"
-                            android:text="Tidak Bayar Pajak"
-                            android:textSize="18sp"/>
-                        <TextView
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:id="@+id/tvTidakTaat"
-                            android:textAlignment="textEnd"
-                            android:textSize="18sp"
-                            android:textColor="@color/black"
-                            android:textStyle="bold"
-                            android:fontFamily="sans-serif-light"
-                            android:layout_alignParentRight="true"/>
-
-                    </RelativeLayout>
 
 
-                </LinearLayout>
-
-            </ScrollView>
-
-        </RelativeLayout>
 
 
-    </androidx.cardview.widget.CardView>
+
+
+
+
+
+
 
 </RelativeLayout>
