--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -33,6 +33,26 @@
 
     </style>
 
+    <string-array name="data_bulan">
+        <item>JANUARI</item>
+        <item>FEBRUARI</item>
+        <item>MARET</item>
+        <item>APRIL</item>
+        <item>MEI</item>
+        <item>JUNI</item>
+        <item>JULI</item>
+        <item>AGUSTUS</item>
+        <item>SEPTEMBER</item>
+        <item>OKTOBER</item>
+        <item>NOVEMBER</item>
+        <item>DESEMBER</item>
+
+
+
+
+
+    </string-array>
+
 
 
 
