--- a/app/src/main/res/layout/activity_peraturanpajak.xml
+++ b/app/src/main/res/layout/activity_peraturanpajak.xml
@@ -25,16 +25,15 @@ android:background="@color/white"
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-
-            android:layout_centerHorizontal="true"
+                  android:layout_centerHorizontal="true"
             android:layout_below="@id/head"
             android:gravity="center"
             android:singleLine="true"
             android:padding="15dp"
             android:ellipsize="marquee"
             android:text="Selamat Datang di Layanan Informasi Peraturan Pajak"
-            android:fontFamily="sans-serif"       android:textColor="#000"
+            android:fontFamily="@font/caviardreamsbold"
+            android:textColor="#000"
             android:textSize="20sp"
             android:id="@+id/txtperaturan"
             />
