--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -34,6 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tentang E-Samsat"
+                android:fontFamily="@font/caviardreamsbold"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
 
@@ -42,9 +43,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/txApp"
                 android:layout_marginTop="6dp"
+                android:fontFamily="@font/blackjack"
                 android:text="Selamat Datang di Layanan Samsat Mobile"
                 android:textColor="#52BAFF"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
         </RelativeLayout>
         <GridLayout
             android:layout_width="match_parent"
