--- a/app/src/main/res/layout/activity_layanan_samsat.xml
+++ b/app/src/main/res/layout/activity_layanan_samsat.xml
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:text="Layanan Samsat"
                 android:textColor="@color/black"
+                android:fontFamily="@font/caviardreamsbold"
                 android:textSize="25sp" />
 
             <TextView
@@ -44,7 +45,9 @@
                 android:layout_marginTop="6dp"
                 android:text="Selamat Datang di Informasi Layanan Samsat "
                 android:textColor="#52BAFF"
-                android:textSize="15sp" />
+
+                android:fontFamily="@font/blackjack"
+                android:textSize="20sp" />
         </RelativeLayout>
 
         <GridLayout
