--- a/app/src/main/res/layout/activity_monitoring.xml
+++ b/app/src/main/res/layout/activity_monitoring.xml
@@ -30,7 +30,8 @@
             android:paddingLeft="10dp"
             android:textColor="#896EFB"
             android:paddingTop="5dp"
-            android:drawableLeft="@drawable/clock"
+            android:drawableLeft="@drawable/time"
+
             android:paddingBottom="5dp"
             android:paddingRight="10dp"
             android:layout_below="@+id/head"
