--- a/app/src/main/res/layout/activity_pembayaran.xml
+++ b/app/src/main/res/layout/activity_pembayaran.xml
@@ -25,8 +25,9 @@
         android:padding="15dp"
         android:ellipsize="marquee"
         android:text="Selamat Datang di Layanan Informasi Pembayaran Pajak"
-        android:fontFamily="sans-serif"       android:textColor="#000"
-        android:textSize="20sp"
+        android:fontFamily="@font/blackjack"
+        android:textColor="#000"
+        android:textSize="23sp"
         android:id="@+id/txtbayar"
         />
     <View
