--- a/app/src/main/res/layout/activity_pengaduan.xml
+++ b/app/src/main/res/layout/activity_pengaduan.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/relative"
-    tools:context=".info.Pengaduan">
+    tools:context=".info.Pengaduan.Pengaduan">
 
     <WebView
         android:layout_width="fill_parent"
