--- a/app/src/main/res/layout/activity_samkel_today.xml
+++ b/app/src/main/res/layout/activity_samkel_today.xml
@@ -19,14 +19,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
+
         android:layout_marginTop="25dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/head"
         android:text="Jadwal Samsat Keliling Hari ini"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="@font/caviardreamsbold"
         android:textColor="#000"
-        android:textSize="20sp"
+        android:textSize="23sp"
         android:id="@+id/txt"
         />
     <View
@@ -41,17 +41,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txt"/>
 
-    <ScrollView
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/view">
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_below="@id/view"
             tools:listitem="@layout/list_samkel"
             android:id="@+id/rv_datasamkel" />
-    </ScrollView>
+
 
 
 
