--- a/app/src/main/res/layout/list_itempembayaran.xml
+++ b/app/src/main/res/layout/list_itempembayaran.xml
@@ -15,7 +15,7 @@
         android:layout_width="200dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/btn"
+        android:src="@drawable/head"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
