--- a/app/src/main/res/layout/list_jadwal.xml
+++ b/app/src/main/res/layout/list_jadwal.xml
@@ -4,22 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-       android:layout_marginRight="10dp"
-    android:layout_marginLeft="10dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
     android:id="@+id/cardview"
     android:onClick="onClick"
     app:cardElevation="2dp"
    app:cardCornerRadius="8dp"
-    app:cardUseCompatPadding="true"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_margin="16dp"
         android:outlineAmbientShadowColor="@color/black"
         android:orientation="vertical">
 
@@ -40,7 +38,7 @@
             android:text="Bukittinggi"
             android:textAppearance="@style/Base.CardView"
             android:textColor="#000"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="16dp"
             android:textSize="18sp"
             />
 
