--- a/app/src/main/res/layout/activity_periode_bulan.xml
+++ b/app/src/main/res/layout/activity_periode_bulan.xml
@@ -8,59 +8,103 @@
 
 
     <ImageView
-        android:layout_width="424dp"
+        android:id="@+id/head"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/banner3"
-        android:id="@+id/head"
-        />
+        android:background="@drawable/banner3" />
 
     <TextView
+        android:id="@+id/txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:layout_marginTop="25dp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/head"
-        android:text="Periode (Bulan)"
-        android:fontFamily="@font/caviardreamsbold"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
         android:textColor="#000"
         android:textSize="20sp"
-        android:id="@+id/txt"
-        />
+        android:textStyle="bold"
+        tools:text="Nama UPTD" />
+
+    <TextView
+        android:id="@+id/tvNotelp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txt"
+        android:text="07-xxx"
+        android:textColor="#0000FF"
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"/>
 
 
     <View
-        android:layout_width="450dp"
-        android:layout_height="2dp"
-        android:layout_gravity="center"
-        android:layout_below="@id/txt"
-        android:layout_marginTop="12dp"
-        android:background="@color/black"
         android:id="@+id/view"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@id/tvNotelp"
+        android:layout_gravity="center"
+        android:background="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt" />
 
-    <Spinner android:id="@+id/spinner1"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:theme="@style/CardView.Dark"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/view" />
-
-    <androidx.recyclerview.widget.RecyclerView
+    <LinearLayout
+        android:id="@+id/linearlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/spinner1"
-        tools:listitem="@layout/list_samkel"
-        android:id="@+id/rv_datasamkel" />
+        android:layout_below="@id/view"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/spinner_outline"
+        android:orientation="vertical">
+
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@+id/view"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:theme="@style/CardView.Dark" />
+
+    </LinearLayout>
 
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_datasamkel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearlayout"
+        android:layout_marginTop="4dp"
+        tools:listitem="@layout/list_samkel"/>
 
+    <LinearLayout
+        android:id="@+id/lnNotFound"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@id/linearlayout"
+        android:gravity="center"
+        android:layout_marginTop="75dp"
+        android:visibility="gone">
 
+        <ImageView
+            android:layout_width="300dp"
+            android:layout_height="250dp"
+            android:src="@drawable/ic_data_not_found"
+            android:layout_centerHorizontal="true"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tidak ada data"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="16sp"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
