--- a/app/src/main/res/layout/activity_samkel_today.xml
+++ b/app/src/main/res/layout/activity_samkel_today.xml
@@ -7,75 +7,68 @@
     tools:context=".ui.SamkelToday.SamkelToday">
 
 
-
     <ImageView
-        android:layout_width="424dp"
+        android:id="@+id/head"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/banner3"
-        android:id="@+id/head"
-        />
+        android:background="@drawable/banner3" />
 
     <TextView
+        android:id="@+id/txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="25dp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/head"
-        android:text="Jadwal Samsat Keliling Hari ini"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
         android:fontFamily="@font/caviardreamsbold"
+        android:text="Jadwal Samsat Keliling Hari ini"
         android:textColor="#000"
-        android:textSize="20sp"
-        android:id="@+id/txt"
-        />
+        android:textSize="20sp" />
+
     <View
+        android:id="@+id/view"
         android:layout_width="450dp"
         android:layout_height="2dp"
-        android:layout_gravity="center"
         android:layout_below="@id/txt"
+        android:layout_gravity="center"
         android:layout_marginTop="12dp"
         android:background="@color/black"
-        android:id="@+id/view"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt" />
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_below="@id/view"
-            tools:listitem="@layout/list_samkel"
-            android:id="@+id/rv_datasamkel" />
-
-
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_datasamkel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/view"
+        android:layout_marginTop="5dp"
+        tools:listitem="@layout/list_samkel" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent">
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/nav_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
             android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="8dp"
             android:background="@drawable/nav_bacground"
+            android:elevation="8dp"
+            app:itemIconTint="@drawable/nav_color_selector"
+            app:labelVisibilityMode="unlabeled"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/menu_nav"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:elevation="8dp"
-            app:labelVisibilityMode="unlabeled"
-            app:itemIconTint="@drawable/nav_color_selector"/>
+            app:menu="@menu/menu_nav" />
     </RelativeLayout>
-
 
 
 </RelativeLayout>
