--- a/app/src/main/res/layout/activity_samsat_keliling.xml
+++ b/app/src/main/res/layout/activity_samsat_keliling.xml
@@ -7,7 +7,7 @@
     tools:context=".info.SamKel.UPTD.SamsatKeliling">
 
     <ImageView
-        android:layout_width="424dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/banner3"
@@ -49,7 +49,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-
             tools:listitem="@layout/list_jadwal"
                android:id="@+id/rv_data"
             tools:ignore="OnClick" />
