--- a/app/src/main/res/layout/list_samkel.xml
+++ b/app/src/main/res/layout/list_samkel.xml
@@ -1,116 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginRight="7dp"
-    android:layout_marginLeft="7dp"
-    app:cardElevation="2dp"
-    app:cardCornerRadius="6dp"
-    app:cardUseCompatPadding="true"
-    >
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="4dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:outlineAmbientShadowColor="@color/black"
-        android:orientation="vertical">
+        android:padding="16dp"
+        android:orientation="vertical"
+        android:outlineAmbientShadowColor="@color/black">
 
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/NamaKota"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-           android:textSize="18dp"
-            android:textStyle="bold"
-            android:text=" KOTA PADANG "
-            android:textColor="#0000FF"
-            />
-        <TableRow
-            android:layout_marginTop="0dp"
-       >
 
-            <TextView
+            <TableRow>
 
-                android:layout_column="1"
-                android:padding="2dip"
+                <TextView
 
-                android:text="Kecamatan         :"
-                android:layout_marginLeft="4dp"
-                android:textColor="#000"
-                android:typeface="serif"/>
+                    android:layout_column="1"
+                    android:layout_marginLeft="4dp"
+                    android:padding="2dip"
+                    android:text="Kecamatan         :"
+                    android:textColor="#000"
+                    android:typeface="serif" />
 
-            <TextView
-                android:id="@+id/txtKecamatan"
-                android:layout_width="220dp"
-                android:gravity="left"
-                android:padding="2dip"
-                android:text="Padang Barat"
-                android:textColor="#000" />
-        </TableRow>
-        <TableRow
-            android:layout_marginTop="5dp"
-           >
+                <TextView
+                    android:id="@+id/txtKecamatan"
+                    android:layout_width="220dp"
+                    android:gravity="left"
+                    android:padding="2dip"
+                    android:textStyle="bold"
+                    android:text="Padang Barat"
+                    android:textColor="#000"/>
+            </TableRow>
 
-            <TextView
-                android:layout_column="1"
-                android:padding="1dip"
+            <TableRow android:layout_marginTop="5dp">
 
-                android:text="Tanggal               :"
-                android:textColor="#000"
-                android:layout_marginLeft="4dp"
-                android:typeface="serif"/>
-            <TextView
+                <TextView
+                    android:layout_column="1"
+                    android:layout_marginLeft="4dp"
 
-                android:id="@+id/txttanggal"
-                android:text="05-10-2021"
-                android:gravity="left"
-                android:layout_width="120dp"
-                android:textColor="@color/black"
-                android:padding="2dip" />
-        </TableRow>
-        <TableRow
+                    android:padding="1dip"
+                    android:text="Tanggal               :"
+                    android:textColor="#000"
+                    android:typeface="serif" />
 
-            android:layout_marginTop="5dp">
-            <TextView
-                android:layout_width="120dp"
-                android:layout_column="1"
+                <TextView
 
-                android:text="Jadwal                 :"
-                android:textColor="@color/black"
-                android:layout_marginLeft="4dp"
-                android:typeface="serif"/>
-            <TextView
-                android:textColor="@color/black"
-                android:id="@+id/txtJadwal"
-                android:text="08:00:00"
-                android:layout_width="120dp"
-                android:gravity="left"
-                android:padding="2dip" />
-        </TableRow>
-        <TableRow
-            android:layout_marginTop="5dp">
-            <TextView
-                android:layout_width="120dp"
-                android:layout_column="1"
-                android:layout_marginLeft="4dp"
-                android:text="Lokasi                  :"
-                android:textColor="@color/black"
-                android:typeface="serif"/>
+                    android:id="@+id/txttanggal"
+                    android:layout_width="120dp"
+                    android:gravity="left"
+                    android:padding="2dip"
+                    android:text="05-10-2021"
+                    android:textColor="@color/black" />
+            </TableRow>
 
-            <TextView
-                android:id="@+id/txtLokasi"
-                android:layout_width="220dp"
-                android:gravity="left"
-                android:padding="2dip"
-                android:text="Cafe UJ BP Kuranji"
-                android:textColor="@color/black" />
-        </TableRow>
+            <TableRow
+
+                android:layout_marginTop="5dp">
+
+                <TextView
+                    android:layout_width="120dp"
+                    android:layout_column="1"
+
+                    android:layout_marginLeft="4dp"
+                    android:text="Jadwal                 :"
+                    android:textColor="@color/black"
+                    android:typeface="serif" />
+
+                <TextView
+                    android:id="@+id/txtJadwal"
+                    android:layout_width="120dp"
+                    android:gravity="left"
+                    android:padding="2dip"
+                    android:text="08:00:00"
+                    android:textColor="@color/black" />
+            </TableRow>
+
+            <TableRow android:layout_marginTop="5dp">
+
+                <TextView
+                    android:layout_width="120dp"
+                    android:layout_column="1"
+                    android:layout_marginLeft="4dp"
+                    android:text="Lokasi                  :"
+                    android:textColor="@color/black"
+                    android:typeface="serif" />
+
+                <TextView
+                    android:id="@+id/txtLokasi"
+                    android:layout_width="220dp"
+                    android:gravity="left"
+                    android:padding="2dip"
+                    android:text="Cafe UJ BP Kuranji"
+                    android:textColor="@color/black" />
+            </TableRow>
         </TableLayout>
 
     </LinearLayout>
